      partype="both".)
    * plotClusterSize: can plot if length(size) < n
      without error/warnings.
    * parLoadModule, parUnloadModule, parListModules,
      parSetFactory, parListFactories: workers returned values as
      expected, but did not actually made changes, bugs fixed,
      allowing full control of JAGS settings on workers.

Version 1.4-0, September 28, 2011
    * Major CRAN release with new parallel features.

Version 1.3-6, September 7, 2011
    * jags.fit return jags model with n.clones
      attribute when n.iter=0.
    * parJagsModel and parCodaSamples: passes the
      n.clones info from data argument.
    * jagsModel and codaSamples added as wrapper
      around jags.model and coda.samples functions of
      rjags package to track dclone information passed
      through data argument and allow custommodel
      specification of model argument (similarly to par* 
      versions of similar functions).
    * .onLoad added to zzz.R

Version 1.3-5, August 23, 2011
    * n.update=1000 is now the default instead of 0
      to ensure independence after adaptation.
      Warning is issued if n.adapt>0 and n.update=0.
    * New argument partype added to dc.parfit,
      possible options (balancing, parchains, both)
      are described on the help page.
    * dc.parfit gained args (update, updatefun, initsfun)
      which are ignored if type is not "parchains".
    * dc.fit and dc.parfit (with "parchains" type)
      now call new internal function .dcFit (former dc.fit reworked
      to allow parallel chains via jags.parfit).
      This function is not exported by namespace, thus
      not user visible and undocumented.
    * dclone is loaded to workers by snowWrapper
      only if .packages() does not contain it yet.
    * dclone method for environmet added: it returns a cloned list.
    * data argument can be environment,
      it is coerced to a list for handling n.clones attribute.
    * jags.fit: quiet argument of jags.model used along with